servicio factura y producto